[package]
name = "nes-ppu"
version = "0.1.0"
description = "A NES graphics emulator with a generic pluggable interface."
edition = "2021"
license-file = "LICENSE"
keywords = ["NES", "emulator", "graphics", "gamedev"]
categories = ["emulators", "rendering"]
repository = "https://github.com/foobles/nes-ppu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive"] }